--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,6 @@ ul{
     border: 1px solid black;
     
 }
-#btn{
-    border:2px solid green;
-    border-radius: 0.5rem;
-    font-size: bold; 
-}
 /* body styles */
 .burj{
     background-image: url(./assets/images/bhurjkhalifa.jpeg) ;
@@ -163,16 +158,10 @@ border-radius: 0.4rem;
     .button, .border-design p{
         margin-bottom: 10px;
     }
-    .img-width{
-        margin-bottom: 1rem;
+    .video{
+        width:100%
     }
-    .youtube{
-        width: 12%;
-        position: absolute;
-        top: 17%;
-        left: 55%;
-        transform: translate(-50%, -50%);
-    }
+    
     .verified,.verify{
         flex-direction: column;
         align-items: center;
@@ -192,11 +181,7 @@ border-radius: 0.4rem;
     }
     .habot{
         width: 100%;
-    }
-
-
-
-    
+    } 
 }
 
 
